@@ -95,6 +95,8 @@ include/raytrace.h
 
 7.14.0
 ------
+mged
+	edcolor -> color -e
 include/vmath.h
 	PI -> M_PI
 	M_SQRT2_DIV2 -> M_SQRT1_2
