@@ -440,7 +440,6 @@ static struct go_cmdtab go_cmds[] = {
     {"e",	(char *)0, MAXARGS, go_autoview_func, ged_draw},
     {"eac",	(char *)0, MAXARGS, go_autoview_func, ged_eac},
     {"edcodes",	(char *)0, MAXARGS, go_pass_through_func, ged_edcodes},
-    {"edcolor",	(char *)0, MAXARGS, go_pass_through_func, ged_edcolor},
     {"edcomb",	(char *)0, MAXARGS, go_pass_through_func, ged_edcomb},
     {"edmater",	(char *)0, MAXARGS, go_pass_through_func, ged_edmater},
     {"erase",	(char *)0, MAXARGS, go_pass_through_and_refresh_func, ged_erase},
